# libcgt

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Application.mk  CMakeLists.txt  LICENSE.txt  README.md  README.txt  Rebracer.xml  autoexp.dat.txt  libcgt-config.cmake.in  vcxproj_win32tox64.fsx
CUDA/: CMakeLists.txt  libcgt_cuda.pro  qmake-vs2010.bat  qmake-vs2013.bat
CUDA/include/: Algorithms.h  ArrayUtils.h  Box3f.h  Box3f.inl  CUDAArray2D.h  CUDAVector.h  CUDAVector2D.h  CUDAVector3D.h  DeviceArray2D.h  DeviceArray2D.inl  DeviceArray3D.h  DeviceArray3D.inl  DevicePool.h  DeviceQueue.h  DeviceQueue.inl  DeviceVariable.h  DeviceVariable.inl  DeviceVector.h  DeviceVector.inl  DeviceVector2D.h  ErrorChecking.h  Event.h  HostArray2D.h  HostArray3D.h  HostPool.h  HostPool.inl  HostVector.h  KernelArray2D.h  KernelArray2D.inl  KernelArray3D.h  KernelArray3D.inl  KernelQueue.h  KernelQueue.inl  KernelVector.h  KernelVector.inl  MathUtils.h  MathUtils.inl  Rect2f.h  Rect2f.inl  Rect2i.h  (+5 more)
CUDA/src/: ArrayUtils.cpp  ArrayUtils.h  Box3f.h  Box3f.inl  DeviceArray1D.h  DeviceArray1D.inl  DeviceArray2D.h  DeviceArray2D.inl  DeviceArray3D.h  DeviceArray3D.inl  DeviceOpaqueArray2D.h  DeviceOpaqueArray2D.inl  DevicePool.cu  DevicePool.h  DeviceQueue.h  DeviceQueue.inl  DeviceVariable.h  DeviceVariable.inl  ErrorChecking.h  Event.cpp  Event.h  HostPool.cu  HostPool.h  KernelArray1D.h  KernelArray1D.inl  KernelArray2D.h  KernelArray2D.inl  KernelArray3D.h  KernelArray3D.inl  KernelQueue.h  KernelQueue.inl  KernelVector.h  KernelVector.inl  MathUtils.h  MathUtils.inl  Rect2f.h  Rect2i.h  Rect2i.inl  ThreadMath.cuh  VecmathConversions.cpp  (+4 more)
GL/: Android.mk  CMakeLists.txt  DepthFloatFramebufferObject.cpp  DepthFloatFramebufferObject.h  GLImageFormat.cpp  GLImageFormat.h  GLImageInternalFormat.h  GLInterleavedVertexBufferView.h  GLOcclusionQuery.cpp  GLOcclusionQuery.h  GLPixelType.cpp  GLPrimitiveType.cpp  GLProgramPipeline.cpp  GLProgramPipeline.h  GLSamplerObject.cpp  GLSamplerObject.h  GLSeparableProgram.cpp  GLSeparableProgram.h  GLShared.cpp  GLShared.h  GLUtilities.cpp  GLUtilities.h  GLVertexAttributeType.cpp  GLVertexAttributeType.h  PlanarVertexBufferCalculator.cpp  PlanarVertexBufferCalculator.h  StandardFramebufferObject.cpp  StandardFramebufferObject.h  VertexPosition4fColor4f.h  VertexPosition4fTexture2f.h  libcgt_gl.pro  qmake-vs2012.bat  qmake-vs2013.bat
GL/GLES_31/: GLBufferObject.cpp  GLBufferObject.h  GLRenderbufferObject.h  GLTexture.cpp  GLTexture2D.cpp  GLTexture3D.cpp  GLVertexArrayObject.cpp
GL/GL_45/: GLBufferObject.cpp  GLBufferObject.h  GLDynamicTextureUnitAssignment.cpp  GLFramebufferObject.cpp  GLFramebufferObject.h  GLRenderbufferObject.cpp  GLRenderbufferObject.h  GLStaticTextureUnitAssignment.cpp  GLTexture.cpp  GLTexture.h  GLTexture1D.cpp  GLTexture1D.h  GLTexture2D.cpp  GLTexture2D.h  GLTexture3D.cpp  GLTexture3D.h  GLTextureCubeMap.cpp  GLTextureCubeMap.h  GLTextureRectangle.cpp  GLTextureRectangle.h  GLVertexArrayObject.cpp  GLVertexArrayObject.h
GL/include/: DepthFloatFramebufferObject.h  GLBufferObject.h  GLBufferObjectManager.h  GLDynamicTextureUnitAssignment.h  GLFramebufferObject.h  GLImageFormat.h  GLImageInternalFormat.h  GLInitializable.h  GLInterleavedVertexBufferView.h  GLOcclusionQuery.h  GLPixelType.h  GLPrimitiveType.h  GLProgram.h  GLRenderbufferObject.h  GLSamplerObject.h  GLShader.h  GLShaderManager.h  GLShared.h  GLStaticTextureUnitAssignment.h  GLTexture.h  GLTexture1D.h  GLTexture2D.h  GLTexture3D.h  GLTextureCubeMap.h  GLTextureRectangle.h  GLUtilities.h  GLVertexArrayObject.h  GLVertexAttributeType.h  StandardFramebufferObject.h  VertexPosition4fColor4f.h  VertexPosition4fTexture2f.h  libcgt_gl.h
GL/src/: DepthFloatFramebufferObject.cpp  GLBufferObject.cpp  GLBufferObjectManager.cpp  GLDynamicTextureUnitAssignment.cpp  GLDynamicTextureUnitAssignment.h  GLFramebufferObject.cpp  GLImageFormat.h  GLOcclusionQuery.cpp  GLOcclusionQuery.h  GLPixelType.h  GLProgram.cpp  GLProgram.h  GLRenderbufferObject.cpp  GLRenderbufferObject.h  GLSamplerObject.cpp  GLSamplerObject.h  GLShader.cpp  GLShader.h  GLShaderManager.cpp  GLShared.cpp  GLStaticTextureUnitAssignment.cpp  GLTexture.cpp  GLTexture.h  GLTexture1D.cpp  GLTexture1D.h  GLTexture2D.cpp  GLTexture3D.cpp  GLTexture3D.h  GLTextureCubeMap.cpp  GLTextureRectangle.cpp  GLUtilities.cpp  GLUtilities.h  GLVertexArrayObject.cpp  GLVertexBufferObject.cpp  StandardFramebufferObject.cpp  VertexPosition4fColor4f.cpp  VertexPosition4fColor4f.h  VertexPosition4fTexture2f.cpp
Kinect/: CMakeLists.txt  README.txt  libcgt_kinect.pro  qmake-vs2010.bat
Kinect1/: CMakeLists.txt
Kinect1x/: CMakeLists.txt  README.txt
OpenCVInterop/: CMakeLists.txt  libcgt_opencvinterop.pro
QtInterop/: CMakeLists.txt  libcgt_qt_interop.pro
camera_wrappers/: CMakeLists.txt  PixelFormat.cpp  PixelFormat.h  PoseStream.cpp  PoseStream.h  RGBDStream.cpp  RGBDStream.h  StreamConfig.h  StreamType.h
core/: Android.mk  CMakeLists.txt  libcgt_core.pro  qmake-vs2010.bat  qmake-vs2012.bat  qmake-vs2013.bat
cuda/: Algorithms.h  ArrayUtils.cpp  ArrayUtils.h  ArrayUtils.inl  Box3f.h  Box3f.inl  CMakeLists.txt  DeviceArray1D.h  DeviceArray1D.inl  DeviceArray2D.h  DeviceArray2D.inl  DeviceArray3D.h  DeviceArray3D.inl  DeviceOpaqueArray2D.cpp  DeviceOpaqueArray2D.h  DevicePool.cu  DevicePool.h  DeviceQueue.h  DeviceQueue.inl  DeviceVariable.h  Event.cpp  HostPool.cu  HostPool.h  KernelArray1D.h  KernelArray2D.h  KernelArray3D.h  KernelQueue.h  KernelQueue.inl  MathUtils.h  Rect2f.h  Rect2f.inl  Rect2i.h  ThreadMath.cuh  VecmathConversions.cpp  VecmathConversions.h  VectorFunctions.h  float3x3.h
math/: CMakeLists.txt  libcgt_math.pro  qmake-vs2010.bat  qmake-vs2013.bat
opencv_interop/: ArrayUtils.cpp  ArrayUtils.h  ArrayUtils.inl  CMakeLists.txt  Calib3d.cpp  Calib3d.h  VecmathUtils.cpp  VecmathUtils.h  libcgt_opencvinterop.pro
qt_interop/: CMakeLists.txt  FPSControls.cpp  FPSControls.h  Filesystem.cpp  Filesystem.h  QGameLoop.cpp  QGameLoop.h  libcgt_qt_interop.pro  qimage.cpp  qimage.h  vecmath.cpp  vecmath.h
(+960 files in other folders)
